[project]
name = "treat-or-hell"
version = "0.1.0"
description = "TreatOrHell - Devil's CV Judge (with Angel Questions)"
requires-python = ">=3.9"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.9",
  "pydantic>=2.0.0",
  "PyPDF2>=3.0.0",
]